cleaup-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cleanup
spec:
  containers:
  - name: cleanup
    image: gcr.io/ancient-dragon-350608/demo-crm-cleanup:1.3
    ports:
    - containerPort: 4000
