crm-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-demo-service
spec:
  selector:
    app: crm-demo
  ports:
  - port: 80
    targetPort: 3000
