ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: crm-demo.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crm-demo-service
            port:
              number: 80
  tls:
  - secretName: baruch-tls
    hosts:
      - crm-demo.ddns.net
